third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/liveness/trailing_semi_loops.exp
script {
    entry fun <SELF>_0() {
        loop continue
    }
}

script {
    entry fun <SELF>_1() {
        loop continue
    }
}

script {
    entry fun <SELF>_2(cond: bool) {
        if (!cond) abort 0;
    }
}

script {
    entry fun <SELF>_3() {
        loop continue
    }
}

script {
    entry fun <SELF>_4() {
        ()
    }
}

script {
    entry fun <SELF>_5() {
        ()
    }
}

script {
    entry fun <SELF>_6(cond: bool) {
        while (!cond) continue;
    }
}

script {
    entry fun <SELF>_7(cond: bool) {
        while (cond) continue;
    }
}

script {
    entry fun <SELF>_8(cond: bool) {
        if (cond) abort 0;
    }
}

script {
    entry fun <SELF>_9(cond: bool) {
        while (!cond) continue;
    }
}

script {
    entry fun <SELF>_10(cond: bool) {
        while (!cond) continue;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ trailing_semi_loops.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
